--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -20,7 +20,7 @@ marketing:
     site_type: Person
     local_businßess_type: ''
     org_name: ''
-    description: 'A highly-customizable Hugo academic resume theme powered by Wowchemy website builder.'
+    description: ''
     twitter: 'wowchemy'
   analytics:
     google_analytics: ''
