--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -20,8 +20,8 @@ marketing:
     site_type: Person
     local_businßess_type: ''
     org_name: ''
-    description: ''
-    twitter: 'wowchemy'
+    description: 'I am a Ph.D.  candidate in Economics at Université de Montreal. My research interest is in macroeconomics with a focus on labor economics, firm heterogeneity and misallocation of factors.'
+    twitter: 'GoudouJesugo'
   analytics:
     google_analytics: 'UA-242990801-1'
     baidu_tongji: ''
