--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -4,7 +4,7 @@
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
 title: Felicien Goudou # Website name
-baseURL: 'https://www.jesugogoudou.me/' # Website URL
+baseURL: 'https://www.jesugogoudou.me' # Website URL
 
 ############################
 ## LANGUAGE
