--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -25,6 +25,9 @@ main:
   - name: Teaching
     url: '#experience'
     weight: 30
+  - name: Research
+    url: '#References'
+    weight: 50
   #- name: Contact
   #  url: '#contact'
   #  weight: 30
