--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -26,7 +26,7 @@ main:
     url: '#experience'
     weight: 30
   - name: References
-    url: '#References'
+    url: '#skills'
     weight: 50
   #- name: Contact
   #  url: '#contact'
