--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -5,7 +5,7 @@
 
 main:
   - name: Home
-    url: '#about'
+    url: 'home/about'
     weight: 10
  #- name: Posts
    #url: '#posts'
@@ -17,16 +17,16 @@ main:
   #   url: '#talks'
   #   weight: 40
   - name: Research
-    url: '#Research'
+    url: 'home/Research'
     weight: 20
   - name: CV
     url: uploads/CV_Felicien_G.pdf
     weight: 40
   - name: Teaching
-    url: '#experience'
+    url: 'hom/experience'
     weight: 30
   - name: References
-    url: '#skills'
+    url: 'home/skills'
     weight: 50
   #- name: Contact
   #  url: '#contact'
@@ -37,3 +37,7 @@ main:
 #  - name: CV
 #    url: uploads/resume.pdf
 #    weight: 70
+[[main]]:
+  - name: Papers
+    url: 'hhome/Researchhh'
+    weight: 10
