--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -41,3 +41,6 @@ main:
   - name: Papers
     url: 'home1/#Working Papers'
     weight: 60
+  - name: Papers
+    url: 'teaching/#experience'
+    weight: 80
