--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -16,9 +16,9 @@ main:
   # - name: Talks
   #   url: '#talks'
   #   weight: 40
-  - name: Research
-    url: 'home/#Research'
-    weight: 20
+  #- name: Research
+    #url: 'home/#Research'
+    #weight: 20
   - name: CV
     url: uploads/CV_Felicien_G.pdf
     weight: 40
@@ -38,7 +38,7 @@ main:
 #    url: uploads/resume.pdf
 #    weight: 70
 
-  - name: Papers
+  - name: Research
     url: 'home1/#Working Papers'
     weight: 60
   - name: Teaching
