--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -20,7 +20,7 @@ marketing:
     site_type: Person
     local_businßess_type: ''
     org_name: ''
-    description: 'Hello! I am a Ph.D. candidate in Economics at Université de Montreal. My research   interest is in macroeconomics with a focus on labor economics, firm heterogeneity and misallocation of factors.'
+    description: 'I am an Assistant Professor of Economics  at Wayne State University. My research interest is in macroeconomics with a focus on labor economics, firm heterogeneity and misallocation of factors.'
     twitter: 'GoudouJesugo'
   analytics:
     google_analytics: 'UA-242990801-1'
